--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "Portfolio-Website",
+  "homepage":"https://githubs010.github.io/jPrasad_portfolio/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
